added a blocking shield added a splash screen  added a restart button upon victory

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,9 +10,24 @@
 
   </head>
   <body>
+    <div class="splash">Welcome to Hack Reactor <br>FIGHT NIGHT!!!!<br><br>
+    <p> PRESS ANY KEY TO CONTINUE </p>
+    <p>Player1 Controls:</p>
+    <p>WASD key movement </p>
+    <p>spacebar: attack</p>
+    <p>F: block</p>
+    <p></p><br>
+    <p>Player2 Controls:</p>
+    <p>arrow key movement</p>
+    <p>shift: attack</p>
+    <p>option: block</p> 
+
+    </div>
+
 
 
     <div class="topbar">
+
       <span class="title">Fight Night Party</span>
       <a href="#" class="addDancerButton" data-boxer-maker-function-name="Fred"> Fred the Champion</a>  
       <a href="#" class="addDancerButton" data-boxer-maker-function-name="Allen">Allen the Challenger</a>      </div>
@@ -22,5 +37,6 @@
       <a href="#" class="playertwo">Player Two Health</a>
       <div class="hitsContainer2"></div>
     <script src="src/init.js"></script>
+
   </body>
 </html>
